<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/result"
    android:text="@string/result"
    android:textColor="@color/black"
    android:layout_marginTop="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/result_value"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result_value"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/result"
        app:layout_constraintStart_toEndOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_value"
        android:hint="@string/input_hint"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:layout_margin="20dp"
        android:inputType="number"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/undo"
        android:text="@string/undo"
        android:padding="10dp"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_value"
        app:layout_constraintHorizontal_chainStyle="spread"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:text="@string/plus"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/undo"
        app:layout_constraintTop_toTopOf="@id/undo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minus"
        android:text="@string/minus"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/multiply"
        app:layout_constraintStart_toEndOf="@id/plus"
        app:layout_constraintTop_toTopOf="@id/undo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/multiply"
        android:text="@string/multiply"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/division"
        app:layout_constraintStart_toEndOf="@id/minus"
        app:layout_constraintTop_toTopOf="@id/undo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/division"
        android:text="@string/division"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/multiply"
        app:layout_constraintTop_toTopOf="@id/undo"
        app:layout_constraintEnd_toStartOf="@id/equal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/equal"
        android:text="@string/equal"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/division"
        app:layout_constraintTop_toTopOf="@id/undo"
        app:layout_constraintEnd_toStartOf="@id/redo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/redo"
        android:text="@string/redo"
        android:padding="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/equal"
        app:layout_constraintTop_toTopOf="@id/undo"
        app:layout_constraintEnd_toEndOf="parent"/>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/recycler_view"
    android:background="@color/black"
    app:layout_constraintHeight_percent="0.7"
    app:layout_constraintTop_toBottomOf="@id/undo"
    android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>